libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-glob-not-ident.jsonc
//@ run: fail
//@ description: any path that isn't an identifier should fail
[
  "::kernel::special_form::use",
  "::core",
  "::core::math::X",
  //~^ ERROR expected a simple name to import
  "x"
]
